# 2024a-rcore

./: .gitignore  .gitmodules  1  Dockerfile  Makefile  README.md  kernel-rv  rust-toolchain.toml
bootloader/: fw_dynamic.elf
os/: .Makefile.swp  Cargo.toml  Makefile  Makefile_loongArch  build.rs  ch2b_hello_world  ch2b_power_3  ch2b_power_5  linker.ld  linker.lds  linker_riscv64.ld  log.txt  out  qemu.dtb  structs.txt
os/.cargo/: config.toml  config_loongArch.toml
os/cargotemp/: config.toml
os/lwext4_rust/: Cargo.toml
os/lwext4_rust/examples/src/: disk.rs  ext4fs.rs
os/lwext4_rust/src/: bindings.rs  blockdev.rs  file.rs
os/riscv/src/paging/: page_table.rs
os/riscv/src/register/: sstatus.rs
os/src/: config.rs  console.rs  entry.asm  entry_loongArch.asm  lang_items.rs  linker.ld  linker.lds  linker_loongarch64.lds  linker_riscv64.ld  linker_riscv64.lds  logging.rs  main.rs  sbi.rs  signal.S  timer.rs
os/src/arch/: mod.rs
os/src/arch/loongarch64/: context.rs  entry.asm  mod.rs  signal.S  trap.S  trap.rs
os/src/arch/riscv64/: context.rs  entry.rs  mod.rs  signal.S  trap.S  trap.rs
os/src/crate/devices/: Cargo.toml
os/src/devices/: device.rs  mod.rs  utils.rs
os/src/drivers/: mod.rs
os/src/drivers/block/: disk.rs  manage.rs  mod.rs  virtio_blk.rs
os/src/drivers/virtio/: mod.rs  virtio_blk.rs  virtio_impl.rs  virtio_input.rs  virtio_net.rs
os/src/executor/: exector.rs  mod.rs
os/src/fs/: dev.rs  fd.rs  inode.rs  mod.rs  mount.rs  pipe.rs  poll.rs  proc.rs  select.rs  stat.rs  stdio.rs
os/src/fs/ext4/: mod.rs  ops.rs
os/src/fs/net/: mod.rs  simple_net.rs
os/src/fs/shm/: mod.rs  ops.rs
os/src/fs/vfs/: mod.rs  vfs_ops.rs
os/src/kernel_guard/src/: lib.rs
os/src/lazy_init/: Cargo.toml
os/src/mm/: address.rs  area.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs  shm.rs
os/src/mm/arch/: loongarch64.rs  mod.rs  riscv64.rs
os/src/polyhal-boot/: Cargo.toml
os/src/polyhal-boot/src/: lib.rs
os/src/polyhal-macro/: Cargo.toml
os/src/polyhal-trap/: .cargo-checksum.json  Cargo.toml
os/src/signal/: mod.rs  sigact.rs  signal.rs
os/src/sync/: futex.rs  mod.rs  mutex.rs  mutex_test.rs  waitqueue.rs
os/src/syscall/: flags.rs  fs.rs  mm.rs  mod.rs  net.rs  other.rs  process.rs  signal.rs
os/src/syscall/arch/: mod.rs
os/src/task/: auxv.rs  context.rs  current.rs  fdmanage.rs  flags.rs  future.rs  id.rs  kstack.rs  manager.rs  mod.rs  processor.rs  schedule.rs  sleeplist.rs  task.rs  timelist.rs  tls.rs  waker.rs  yieldfut.rs
os/src/trap/: context.rs  mod.rs  trap.S  trap_loongArch.S  ucontext.rs
os/src/utils/: error.rs  hart.rs  mm.rs  mod.rs  string.rs
os/virtio-drivers/: .cargo-checksum.json  Cargo.toml
os/virtio-drivers/src/transport/: mmio.rs
(+36 files in other folders)
