[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
xmas-elf = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fs" }
cfg-if = { path = "vendor/cfg-if" }
kernel_guard = { path = "src/kernel_guard" ,features = ["preempt"]}
lazy_init = { path = "vendor/lazy_init"}
spin = "0.9"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { version = "0.10.1", features = ["inline-asm"] }

# LoongArch 自定义crate
# [target.'cfg(target_arch = "loongarch64")'.dependencies]
# loongarch = { path = "../loongarch-crate" }

[profile.release]
debug = true

opt-level = 0
[profile.dev]
debug = true
opt-level = 0
