[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
bit_field = "0.10"

xmas-elf = "0.7.0"
virtio-drivers = "0.8.0"
cfg-if ="1.0.0"
lazy_init = { path = "src/lazy_init"}
spin = "0.9"
hashbrown = "0.12.0"
linux-raw-sys = { version = "0.9.3", default-features = false, features = ["general", "no_std"] }
num_enum = { version = "0.7.2", default-features = false }
lwext4_rust = { path = "lwext4_rust" }
async-trait = "0.1.88"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
libc = "0.2"
loongArch64 = "0.2.5"
polyhal = { version = "0.4.0"}
polyhal-boot = { version = "0.4.0" }
fdt = "0.1.5"
fdt-parser = { version = "0.4.12" }
linkme = { version = "0.3.22", features = ["used_linker"] }

[profile.release]
debug = false 
opt-level = 3
strip = true  

[profile.dev]
debug = true
opt-level = 0
strip = false   
[env]
RUST_LOG = "debug,lwext4_rust=off"
