[package]
name = "devices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
polyhal = { version = "0.4.0"}
spin = "0.9"
linkme = { version = "0.3.22", features = ["used_linker"] }
log = "0.4"
lazy_init = { path = "../../lazy_init"}
timestamp = { git = "https://github.com/Byte-OS/timestamp.git" }
fdt-parser = { version = "0.4.12" }